cluster/actual/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual-service
  namespace: actual
spec:
  type: ClusterIP
  selector:
    app: actual
  ports:
    - port: 5006
      protocol: TCP
