cluster/actual/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: actual-route
  namespace: actual
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`actual.nathanv.app`)
      kind: Rule
      services:
        - name: actual-service
          port: 5006
  tls:
    certResolver: le
    domains:
      - sans:
          - "*.nathanv.app"
